@@ -684,3 +684,4 @@ table.insert(tests, "ws_ops_with_wrong_node_type")
 table.insert(tests, "pivot_root_to_new_dir")
 table.insert(tests, "multiple_message_commit")
 table.insert(tests, "netsync_epoch_refinement")
+table.insert(tests, "disapproving_with_message")
